# 2D-Engine-Backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  temp_raw.txt  vcpkg.json
engine/: CMakeLists.txt
engine/include/engine/core/: Application.h
engine/include/engine/core/Application/: AppEvent.h  Application.h  IAppHost.h  IScene.h
engine/include/engine/core/Renderer/: IRenderer.h  IWindowSurface.h  OpenGLRenderer.h  RenderSurface.h  Types.h
engine/include/engine/platform/: IWindowSurface.h  SdlAppHost.h  SdlWindowSurface.h  SpriteRenderer.h
engine/src/core/: Application.cpp
engine/src/core/Application/: Application.cpp
engine/src/core/Renderer/: OpenGLRenderer.cpp
engine/src/platform/: SdlAppHost.cpp  SdlWindowSurface.cpp  SpriteRenderer.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
